# bgfx-experiments

./: .gitignore  README.md
1-2d/: CMakeLists.txt  VertexShader.vs  bgfx_shader.sh  build.sh  main.cpp  test.sh  varying.def.sc
2-emscripten-build/: CMakeLists.txt  FragmentShader.fs  build.sh  index.html  main.cpp
